everhything is done

--- a/src/Quiz.Api/appsettings.json
+++ b/src/Quiz.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "CSharpQuiz": "Host=localhost;Database=csharp-quiz;Username=root;Password=example"
+    "CSharpQuiz": "Host=localhost;Database=csharp-quiz;Username=postgres;Password=aziz0201"
   },
   "AppConfig": {
     "ConnectionString": "",
