--- a/.github/workflows/dockerize.yml
+++ b/.github/workflows/dockerize.yml
@@ -24,7 +24,6 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Log in to Container Registry
-        if: github.event_name == 'push' && github.ref_name == 'main'
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
@@ -45,13 +44,13 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build and (conditionally) push Docker image
+      - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./Dockerfile
-          push: ${{ github.event_name == 'push' && github.ref_name == 'main' }}
+          push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
-          cache-to: type=gha,mode=max
+          cache-to: type=gha,mode=max 
